# learning

./: .gitignore  README.md  S.rb  avgtemp.awk  erlang-guards.erl  m.c  mergesort.hs  skew.erl  strip_state.py
99h/: 1.hs  10.hs  11.hs  11.hs.bak  11.hs.bak2  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  2.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  26.hs  3.hs  4.hs  5.hs  6.hs  7.hs  8.hs  9.hs
alpaca-example/: LICENSE  README.md  notes.md  rebar.config
ansible-vault/: .gitattributes  .gitignore  ansible.cfg  test.yml
assemblyscript-sandbox/: package-lock.json  package.json
awk/: regex-in-var.awk
barebones-higherhalf-osdev/: build  kernel.c  linker.ld  loader.asm
beamer/: doc.aux  doc.rst  doc.tex  doc.vrb  doc2.aux  doc2.tex  doc2.vrb
c++/: Makefile  add_one.cc  allowed-template-parameters.cc  boost-irange.cc  conc.cc  copy.cc  cpp-vectorbounds.cc  debugging.cc  delete.cc  deserialize.cc  func-decltype  func-decltype.cc  inner-typedef.cc  serialize.cc  sizeof.cc  tpl.cpp
c++-aliasing/: alias  alias.cpp
c++-casts/: static  static.cc
c++-grep/: Makefile  burp  burp.cc
c++-namespace-extern-c/: a.out  main.cc
c++-unicode/: Converter.cc  Converter.h  main.cc  main1.cc  main2.cc  main3.cc  testfile
c++11/: mp3.cpp  vector-equality.cc
c-combinations/: Makefile  comb.c
c-compile-time-assert/: main  main.c
c-dnssd/: main.c
c-elf/: Makefile  elf64entry  elf64entry.c
c-fsm/: fsm1.c
c-hash/: hash.c
rust-cargo-workspaces/adder/: Cargo.toml
rust-cargo-workspaces/adder/src/: main.rs
rust-warp-ws-example/: Cargo.toml  README.md
(+1335 files in other folders)
