[package]
name = "adder"
version = "0.1.0"
authors = ["Radek Szymczyszyn <radoslaw.szymczyszyn@erlang-solutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
add-one = { path = "../add-one" }
add-two = { path = "../add-two" }
rand = "0.5.5"
